--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -254,6 +254,7 @@
     <string name="ConversationFragment_deleting_messages">Deleting messages...</string>
     <string name="ConversationFragment_quoted_message_not_found">Original message not found</string>
     <string name="ConversationFragment_quoted_message_no_longer_available">Original message no longer available</string>
+    <string name="ConversationFragment_failed_to_open_message">Failed to open message</string>
 
     <!-- ConversationListActivity -->
     <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">There is no browser installed on your device.</string>
