--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -6,9 +6,11 @@
   <string name="delete">Обриши</string>
   <string name="please_wait">Сачекајте...</string>
   <string name="save">Сачувај</string>
+  <string name="note_to_self">Моја белешка</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Нова порука</string>
   <!--AlbumThumbnailView-->
+  <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Тренутно: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Још нисте поставили лозинку!</string>
@@ -25,11 +27,11 @@
   </plurals>
   <string name="ApplicationPreferencesActivity_delete">Обриши</string>
   <string name="ApplicationPreferencesActivity_disable_passphrase">Да искључим лозинку?</string>
-  <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Ово ће трајно да откључа Signal и обавештења о порукама.</string>
+  <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Ово ће трајно да откључа Сигнал и обавештења о порукама.</string>
   <string name="ApplicationPreferencesActivity_disable">Искључи</string>
   <string name="ApplicationPreferencesActivity_unregistering">Одјављујем</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Одјављујем се са порука и позива преко Signal-a...</string>
-  <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Онемогућити поруке и позиве преко Signal-a?</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Одјављујем се са порука и позива преко Сигнала...</string>
+  <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Онемогућити поруке и позиве преко Сигнала?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Онемогућите поруке и позиве преко Signal-a одјавом са сервера.
 Мораћете поново да пријавите ваш број телефона да бисте опет их користили убудуће.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Грешка повезивања на сервер!</string>
@@ -56,8 +58,10 @@
   <string name="DraftDatabase_Draft_video_snippet">(видео)</string>
   <string name="DraftDatabase_Draft_location_snippet">(локација)</string>
   <string name="DraftDatabase_Draft_quote_snippet">(одговор)</string>
-  <!--AttchmentManager-->
+  <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Нема апликације за избор медијума.</string>
+  <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">Отпремање медија</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Грешка пуштања звука!</string>
   <!--BlockedContactsActivity-->
@@ -70,10 +74,23 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Долазни позив</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_image_save_failure">Фотографија није сачувана</string>
+  <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Недавна комуникација</string>
+  <string name="CameraContacts_signal_contacts">Signal контакти</string>
+  <string name="CameraContacts_signal_groups">Signal групе</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Можете поделити са максимално %d разговора. </string>
+  <string name="CameraContacts_select_signal_recipients">Изаберите Signal примаоце</string>
+  <string name="CameraContacts_no_signal_contacts">Немате Signal контаката</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Можете користити дугме камере за слање фотографија само Signal контактима.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Не можете наћи оно што тражите?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Позовите контакт да се прикључи апликацији Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Уклони</string>
   <string name="ClearProfileActivity_remove_profile_photo">Да уклоним профилну слику?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">На вашем уређају нема Веб прегледача.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Позив преко мобилног оператера је већ у току.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Ваш безбедносни број са %1$s је промењен. Ово може да значи или да неко покушава да пресретне вашу комуникацију или да је корисник %2$s једноставно поново инсталирао Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Можда желите да потврдите ваш безбедносни број за овај контакт.</string>
@@ -109,6 +126,9 @@
   <string name="ConversationItem_copied_text">Копирана %s</string>
   <string name="ConversationItem_from_s">од %s</string>
   <string name="ConversationItem_to_s">за %s</string>
+  <string name="ConversationItem_read_more"> прочитајте више</string>
+  <string name="ConversationItem_download_more"> преузмите више</string>
+  <string name="ConversationItem_pending"> на чекању</string>
   <!--ConversationActivity-->
   <string name="ConversationActivity_reset_secure_session_question">Ресетовати безбедну сесију?</string>
   <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">Може да помогне ако имате проблема са шифровањем у овој преписци. Поруке ће остати.</string>
@@ -133,12 +153,17 @@
   <string name="ConversationActivity_error_leaving_group">Грешка при напуштању групе</string>
   <string name="ConversationActivity_specify_recipient">Одредите примаоца</string>
   <string name="ConversationActivity_unblock_this_contact_question">Одлокирати овај контакт?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Одблокирај ову групу?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Поново можете да примате поруке и позиве од овог контакта.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Чланови ће моћи да Вас поново додају у групу.</string>
   <string name="ConversationActivity_unblock">Одблокирај</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Прилог прекорачује ограничење величине за тип поруке коју шаљете.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Камера није доступна</string>
   <string name="ConversationActivity_unable_to_record_audio">Не могу да снимим звук!</string>
   <string name="ConversationActivity_there_is_no_app_available_to_handle_this_link_on_your_device">Нема апликације за руковање овом везом на вашем уређају.</string>
+  <string name="ConversationActivity_to_send_audio_messages_allow_signal_access_to_your_microphone">Да бисте послали аудио поруку, одобрите Signal-у дозволе за коришћење микрофона.</string>
+  <string name="ConversationActivity_signal_requires_the_microphone_permission_in_order_to_send_audio_messages">Signal захтева дозволе за коришћење микрофона како би могао да шаље аудио поруке, али му је дозбола блокирана за стално. Молимо Вас да уђете у подешавања уређаја, изаберите „Апликације, затим „Дозволе“ и одобрите коришћење микрофона апликацији Signal.</string>
+  <string name="ConversationActivity_to_call_s_signal_needs_access_to_your_microphone_and_camera">Да бисте позвали %s, Signal-у су неопходне дозволе за коришћење Вашег микрофона и камере.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
   <string name="ConversationActivity_yes">Да</string>
   <string name="ConversationActivity_no">Не</string>
@@ -278,6 +303,7 @@
   <string name="ExperienceUpgradeActivity_no_thanks">Не, хвала</string>
   <string name="ExperienceUpgradeActivity_got_it">Важи</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Примам поруку...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Трајни неуспех комуникације Signal-a!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal није успео да се пријави на Гуглов Плеј сервис. Комуникација преко канала података је онемогућена, покушајте поново да се пријавите преко Поставке &gt; Напредно.</string>
@@ -310,6 +336,7 @@
   <string name="GroupMembersDialog_me">Ја</string>
   <!--CropImageActivity-->
   <string name="CropImageActivity_group_avatar">Аватар групе</string>
+  <string name="CropImageActivity_profile_avatar">Аватар</string>
   <!--InputPanel-->
   <string name="InputPanel_tap_and_hold_to_record_a_voice_message_release_to_send">Тапните и држите за снимање гласовне поруке, пустите за слање</string>
   <!--InviteActivity-->
@@ -334,10 +361,14 @@
   <string name="InviteActivity_no_app_to_share_to">Изгледа да немате ниједну апликацију преко које бисте могли да делите.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Пријатељи не допуштају пријатељима да ћаскају небезбедно.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Радим у позадини...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Неуспех слања</string>
   <string name="MessageDetailsRecipient_new_safety_number">Нови безбедносни број</string>
   <!--LongMessageActivity-->
+  <string name="LongMessageActivity_unable_to_find_message">Нисам успео да пронађем поруку</string>
+  <string name="LongMessageActivity_message_from_s">Порука од %1$s</string>
+  <string name="LongMessageActivity_your_message">Ваша порука</string>
   <!--MessageRetrievalService-->
   <string name="MessageRetrievalService_signal">Signal</string>
   <string name="MessageRetrievalService_background_connection_enabled">Позадинска веза активна</string>
@@ -418,6 +449,7 @@
   <string name="PassphrasePromptActivity_watermark_content_description">Икона Signal-a</string>
   <string name="PassphrasePromptActivity_ok_button_content_description">Поднеси лозинку</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Нетачна лозинка!</string>
+  <!--PlacePickerActivity-->
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Инсталирано издање Гуглових Плеј сервиса не функционише исправно. Реинсталирајте Гуглове Плеј сервисе и покушајте поново.</string>
   <!--RatingManager-->
@@ -433,6 +465,8 @@
   <string name="RecipientPreferenceActivity_block">Блокирај</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Одлокирати овај контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Поново можете да примате поруке и позиве од овог контакта.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Одблокирај ову групу?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Чланови ће моћи да Вас поново додају у групу.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Грешка при напуштању групе</string>
   <string name="RecipientPreferenceActivity_unblock">Одблокирај</string>
   <string name="RecipientPreferenceActivity_enabled">Укључено</string>
@@ -472,6 +506,8 @@
   <string name="RegistrationActivity_unable_to_connect_to_service">Не могу да се повежем на услугу. Проверите вашу везу и покушајте поново.</string>
   <string name="RegistrationActivity_continue">Настави</string>
   <string name="RegistrationActivity_call">Позови</string>
+  <!--RevealableMessageView-->
+  <string name="RevealableMessageView_photo">Слика</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Неуспех уписа промене слике</string>
   <!--Search-->
@@ -1118,12 +1154,19 @@
   <string name="registration_lock_dialog_view__enter_pin">Унесите ПИН</string>
   <string name="registration_lock_dialog_view__confirm_pin">Потврдите ПИН</string>
   <string name="registration_lock_reminder_view__enter_pin">Унесите ПИН</string>
+  <string name="preferences_app_protection__registration_lock">Закључавање регистрације</string>
   <string name="RegistrationActivity_too_many_attempts">Превише покушаја</string>
   <string name="RegistrationActivity_error_connecting_to_service">Грешка повезивања са услугом</string>
   <string name="RegistrationActivity_oh_no">О, не!</string>
+  <string name="RegistrationActivity_registration_lock_pin">ПИН за закључавање регистрације</string>
   <string name="RegistrationLockDialog_i_forgot_my_pin">Заборавио сам ПИН.</string>
   <string name="RegistrationLockDialog_forgotten_pin">Заборавили сте ПИН?</string>
+  <string name="RegistrationLockDialog_registration_lock">Закључавање регистрације</string>
   <string name="RegistrationLockDialog_enable">Укључи</string>
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">ПИН за закључавање регистрације мора имати најмање 4 цифре.</string>
+  <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Два ПИН броја које сте унели се не поклапају.</string>
+  <string name="RegistrationLockDialog_error_connecting_to_the_service">Грешка при повезивању са сервисом</string>
+  <string name="RegistrationLockDialog_disable_registration_lock_pin">Онемогући ПИН заштиту регистрације?</string>
   <string name="RegistrationLockDialog_disable">Искључи</string>
   <string name="preferences_chats__backups">Резерве</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal је закључан</string>
